--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -72,6 +72,8 @@
 
 .hero-img-con img {
   width: 500px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.3);
 }
 
 @media screen and (max-width: 680px) {
