--- a/src/styles/reglogin.css
+++ b/src/styles/reglogin.css
@@ -53,6 +53,20 @@
   padding: 40px 20px;
   border-radius: 5px;
 }
+@media screen and (max-width: 500px) {
+  .login,
+  .register {
+    padding: 0;
+  }
+  .close-modal-icon {
+    position: fixed;
+    top: 30px;
+    right: 20px;
+  }
+  .reg-and-login form {
+    width: 320px;
+  }
+}
 
 .reg-and-login form input {
   width: 100%;
