--- a/src/styles/reglogin.css
+++ b/src/styles/reglogin.css
@@ -82,7 +82,6 @@
   outline: none;
   border: 2px solid #000;
 }
-
 .reg-and-login form input::placeholder {
   color: #fff;
 }
@@ -118,4 +117,12 @@
 .dont-have-acc-con p:last-child:hover,
 .have-acc-con p:last-child:hover {
   text-decoration: underline;
+}
+@media screen and (max-width: 500px) {
+  .reg-and-login form input,
+  .reg-and-login form > button,
+  .dont-have-acc-con,
+  .have-acc-con {
+    margin-top: 15px;
+  }
 }
