--- a/src/styles/reglogin.css
+++ b/src/styles/reglogin.css
@@ -76,11 +76,11 @@
   margin-top: 20px;
   border-radius: 8px 0 8px 0;
   color: #fff;
-  border: 1px solid #000;
+  border: 1px solid rgb(122, 122, 245);
 }
 .reg-and-login form input:focus {
   outline: none;
-  border: 2px solid #000;
+  border: 3px solid rgb(122, 122, 245);
 }
 .reg-and-login form input::placeholder {
   color: #fff;
