--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(to left, var(--grey), #ece9e9);
+  background: linear-gradient(to left, #ece9e9, var(--grey));
   z-index: 999;
 }
 
