--- a/src/styles/contactus.css
+++ b/src/styles/contactus.css
@@ -107,9 +107,10 @@
 
 .send-message {
   margin: 20px 10px 20px;
-  border: 2px solid #000;
+  border: 2px solid var(--blueFamily);
   background-color: inherit;
-  color: #000;
+  color: var(--blueFamily);
+  font-weight: 600;
   padding: 10px 50px;
   font-size: 16px;
   border-radius: 30px;
@@ -123,7 +124,7 @@
     box-shadow: none;
   }
   100% {
-    box-shadow: 0px 0px 4px 4px rgba(37, 37, 37, 0.2);
+    box-shadow: 0px 0px 4px 4px rgba(54, 54, 236, 0.2);
   }
 }
 
