--- a/src/styles/reglogin.css
+++ b/src/styles/reglogin.css
@@ -68,6 +68,42 @@
   }
 }
 
+.register form > p {
+  visibility: hidden;
+}
+.add-success-message {
+  visibility: visible !important;
+  color: rgb(4, 255, 4);
+  font-weight: 500;
+  text-shadow: 2px 3px #928f8f;
+  animation: successAnim ease-in-out 0.5s infinite;
+}
+@keyframes successAnim {
+  0% {
+    text-shadow: 0px 0px #000;
+  }
+  100% {
+    text-shadow: 2px 3px #928f8f;
+  }
+}
+
+.add-failure-message {
+  visibility: visible !important;
+  color: red;
+  font-weight: 500;
+  font-size: 20px;
+  text-shadow: 2px 2px #928f8f;
+  animation: FailureAnim ease-in-out 0.5s infinite;
+}
+@keyframes FailureAnim {
+  0% {
+    text-shadow: 0px 0px #000;
+  }
+  100% {
+    text-shadow: 2px 2px #928f8f;
+  }
+}
+
 .reg-and-login form input {
   width: 100%;
   height: 40px;
