--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,19 @@
 body {
   font-size: var(--generalText);
 }
+
+/* Chrome, Edge and safari customized scrollbar */
+body::-webkit-scrollbar {
+  width: 6px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(143, 137, 137, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: rgba(143, 137, 137, 0.3);
+  border-radius: 20px;
+  border: 3px solid var(--blueFamily);
+}
+/* Chrome, Edge and Safari customized scrollbar */
