--- a/src/styles/whychooseus.css
+++ b/src/styles/whychooseus.css
@@ -33,6 +33,16 @@
   margin-bottom: 20px;
 }
 
+.feature p {
+  font-size: 16px;
+}
+
+.feature p a {
+  color: var(--blueFamily);
+  font-weight: 600;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 920px) {
   .why-choose-us {
     flex-direction: column;
