--- a/src/styles/myurl.css
+++ b/src/styles/myurl.css
@@ -25,7 +25,14 @@
 
 .table-con {
   max-width: 900px;
-  margin: 3rem auto;
+  margin: 2rem auto 3rem;
+}
+
+.table-con p {
+  text-align: center;
+  margin-bottom: 20px;
+  color: red;
+  font-weight: 600;
 }
 
 .table-con table {
@@ -46,4 +53,19 @@
   .table-con {
     overflow-x: scroll;
   }
+  /* Chrome, Edge and safari customized scrollbar */
+  .table-con::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .table-con::-webkit-scrollbar-track {
+    background: rgba(143, 137, 137, 0.3);
+  }
+
+  .table-con::-webkit-scrollbar-thumb {
+    background: rgba(143, 137, 137, 0.3);
+    border-radius: 20px;
+    border: 3px solid var(--blueFamily);
+  }
+  /* Chrome, Edge and Safari customized scrollbar */
 }
