--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,4 +1,5 @@
 .top-header {
+  /* border: 2px solid red; */
   position: fixed;
   top: 0;
   left: 50%;
@@ -62,6 +63,11 @@
   width: 70%;
   margin-left: auto;
 }
+@media screen and (max-width: 1290px) {
+  .top-header nav {
+    width: 68%;
+  }
+}
 
 nav ul {
   display: flex;
@@ -71,7 +77,7 @@ nav ul {
 
 nav ul:nth-child(2) {
   /* border: 2px solid green; */
-  width: 50%;
+  width: 55%;
 }
 nav ul:last-child {
   /* border: 2px solid yellow; */
@@ -115,6 +121,10 @@ nav ul li button a {
 }
 
 @media screen and (min-width: 1300px) {
+  .top-header nav {
+    width: 62%;
+  }
+
   nav ul:nth-child(2) {
     /* border: 2px solid red; */
     width: 40%;
@@ -122,7 +132,7 @@ nav ul li button a {
 
   nav ul:last-child {
     /* border: 2px solid red; */
-    width: 20%;
+    width: 25%;
   }
 }
 
